--- a/FireChat/Info.plist
+++ b/FireChat/Info.plist
@@ -58,5 +58,9 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow FireChat to access camera.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Allow FireChat to access photo library.</string>
 </dict>
 </plist>
